Fix TabPanel overflow (instead of auto-scroll) in Safari

--- a/teamapps-client/less/components/UiTabPanel.less
+++ b/teamapps-client/less/components/UiTabPanel.less
@@ -176,6 +176,7 @@
         .tab-component-container {
           flex: 1 1 1px;
           height: 100%;
+          max-height: 100%; // needed for safari. Will make the content overflow (instead of auto-scroll) if not set.
           overflow: visible;
 
           > * {
